[gd_scene load_steps=2 format=3 uid="uid://starting_item_selection_001"]

[ext_resource type="Script" path="res://scenes/ui/StartingSelection.gd" id="1_starting_item"]

[node name="StartingSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_starting_item")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.101961, 0.101961, 0.14902, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "STARTING_ITEM_TITLE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContentSplit" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 40

[node name="LeftPanel" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ContentSplit"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="DifficultyTitle" type="Label" parent="MarginContainer/VBoxContainer/ContentSplit/LeftPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "DIFFICULTY_SELECT_TITLE"
horizontal_alignment = 1

[node name="DifficultyContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ContentSplit/LeftPanel"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/ContentSplit/LeftPanel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="SubtitleLabel" type="Label" parent="MarginContainer/VBoxContainer/ContentSplit/LeftPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Select Weapon"
horizontal_alignment = 1

[node name="ItemContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/ContentSplit/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 3

[node name="RightPanel" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ContentSplit"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="CharacterStatsLabel" type="Label" parent="MarginContainer/VBoxContainer/ContentSplit/RightPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Character Stats"
horizontal_alignment = 1

[node name="StatsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ContentSplit/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="ActionsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ContinueButton" type="Button" parent="MarginContainer/VBoxContainer/ActionsContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
text = "BUTTON_CONTINUE"
disabled = true

